third_party/rust/chromium_crates_io/vendor/zerocopy-0.7.35/tests/ui-stable/transmute-ref-src-not-a-reference.stderr
error[E0308]: mismatched types
  --> tests/ui-stable/transmute-ref-src-not-a-reference.rs:17:49
   |
17 | const SRC_NOT_A_REFERENCE: &u8 = transmute_ref!(0usize);
   |                                  ---------------^^^^^^-
   |                                  |              |
   |                                  |              expected `&_`, found `usize`
   |                                  expected due to this
   |
   = note: expected reference `&_`
                   found type `usize`
help: consider borrowing here
   |
17 | const SRC_NOT_A_REFERENCE: &u8 = transmute_ref!(&0usize);
   |                                                 +
